Bug 1369677 - Handle RenderTexture lock() failed. r=nical

MozReview-Commit-ID: Ghez1SJ6ghf